# Doantung_final_project

App/gps_mobile_app/: README.md  pubspec.yaml
App/gps_mobile_app/android/app/: build.gradle.kts
App/gps_mobile_app/ios/Runner/: Info.plist
App/gps_mobile_app/ios/Runner.xcodeproj/: project.pbxproj
App/gps_mobile_app/lib/: main.dart
App/gps_mobile_app/lib/components/: card_management_page.dart  chart_page.dart  home_page.dart  setting_page.dart
App/gps_mobile_app/lib/services/: mqtt_client_helper.dart  mqtt_client_helper_native.dart  mqtt_client_helper_web.dart  mqtt_service.dart  rfid_service.dart
App/gps_mobile_app/linux/: CMakeLists.txt
App/gps_mobile_app/linux/runner/: my_application.cc
App/gps_mobile_app/macos/Runner.xcodeproj/: project.pbxproj
App/gps_mobile_app/test/: widget_test.dart
App/gps_mobile_app/web/: index.html  manifest.json
App/gps_mobile_app/windows/: CMakeLists.txt
App/gps_mobile_app/windows/runner/: Runner.rc  main.cpp
Firmware/: CMakeLists.txt
Firmware/components/at_command/: CMakeLists.txt  at_command.c
Firmware/components/at_command/include/: at_command.h
Firmware/components/at_command/l9110s/: CMakeLists.txt  l9110s.c
Firmware/components/at_command/l9110s/include/: l9110s.h
Firmware/components/config_parameter/: CMakeLists.txt  config_parameter.h
Firmware/components/gps_neo6m/: CMakeLists.txt  gps_neo6m.c
Firmware/components/gps_neo6m/include/: gps_neo6m.h
Firmware/components/rfid_rc522/: CMakeLists.txt  rfid_rc522.c
Firmware/main/: CMakeLists.txt  main.c
PCB NO.1/: PCB1.PcbDoc  PCB_Project1.PrjPCB
(+5 files in other folders)
